--- a/webBanTiVi/src/main/resources/templates/admin/page/product/attributes.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/product/attributes.html
@@ -36,7 +36,7 @@
                 <div class="mb-3">
                     <label class="label">Loại: </label>
                     <div class="form-check form-check-inline mt-3 mx-3">
-                        <input class="form-check-input" type="radio" name="attri" value="true" id="nomal"
+                        <input class="form-check-input" type="radio" name="attri" value="true" id="normal"
                                checked="checked">
                         <label class="form-check-label" for="active">Thường</label>
                     </div>
