--- a/webBanTiVi/src/main/resources/templates/user/page/policy/policy.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/policy/policy.html
@@ -86,23 +86,16 @@
 
             </p>
             <p class="fw-bold">
-                6. Chi phí trả hàng</p>
-            <p>
-                Theo hình thức “Lấy hàng hoàn trả tại nhà” hoặc “Gửi hàng tại bưu cục”: Người mua không phải thanh
-                toán
-                bất cứ khoản phí vận chuyển nào cho việc trả hàng;
-            </p>
-            <p class="fw-bold">
-                7. Hoàn tiền cho Hàng trả lại
+                6. Hoàn tiền cho Hàng trả lại
             </p>
             <p>
-                7.1. Cửa hàng sẽ chỉ hoàn tiền cho Người mua khi Người mua đáp ứng một trong các trường hợp sau: Cửa
+                6.1. Cửa hàng sẽ chỉ hoàn tiền cho Người mua khi Người mua đáp ứng một trong các trường hợp sau: Cửa
                 hàng
                 xác nhận đã nhận được Hàng trả lại và khách hàng bắt buộc phải có tài khoản ngân hàng để được hoàn
                 tiền sau khi trả hàng.
             </p>
             <p>
-                7.2. Nếu giá trị đơn hàng của bạn sau khi trả mà nhỏ hơn giá trị tối thiểu để áp dụng voucher thì
+                6.2. Nếu giá trị đơn hàng của bạn sau khi trả mà nhỏ hơn giá trị tối thiểu để áp dụng voucher thì
                 voucher của
                 bạn
                 sẽ bị mất và giá trị của voucher đó cửa hàng sẽ trừ vào số tiền mà cửa hàng hoàn lại cho bạn . Trường
@@ -111,10 +104,14 @@
                 chênh
                 lệch giá trị của voucher và giá trị sản phẩm lần trả hàng đó.
             </p>
+            <p>6.3. Trường hợp lần trả hàng mà khách hàng phải gửi lại tiền cho cửa hàng, khách hàng sẽ gửi vào tài khoản đã có trong chi tiết lần trả hàng của đơn hàng đó với nội dung : HT+ Mã hóa đơn</p>
             <p>
-                7.3. Bạn sẽ không được nhận lại voucher đã sử dụng khi trả hàng Yêu cầu Trả hàng/Hoàn tiền của bạn thông
+                6.4. Bạn sẽ không được nhận lại voucher đã sử dụng, khi trả hàng Yêu cầu Trả hàng/Hoàn tiền của bạn thông
                 thường sẽ được xử lý trong khoảng 3 - 5 ngày làm việc Kết quả xử lý sẽ được thông báo trong đơn hàng của
-                bạn , bạn hãy thường xuyên theo dõi đơn hàng của mình để nhận thông tin trả hàng Khi bạn yêu cầu Trả
+                bạn , bạn hãy thường xuyên theo dõi đơn hàng của mình để nhận thông tin trả hàng
+            </p>
+            <p>
+                6.5. Khi bạn yêu cầu Trả
                 hàng/Hoàn tiền , phí vận chuyển sẽ không được hoàn lại cho bạn và quá trình vận chuyển hàng về lại cửa
                 hàng bạn cũng sẽ chịu phí vận chuyển Big6 Store sẽ kiểm tra tình trạng hàng hoàn trả dựa trên lý do của
                 yêu
@@ -257,7 +254,7 @@
                             <tr>
                                 <td>
                                     <i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Hàng khác với mô tả
-                                    của Người bán tại Shopee Mall</strong>
+                                    của cửa hàng</strong>
                                 </td>
                                 <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
                                                                             data-cell="2" data-rowspan="1"
@@ -451,48 +448,6 @@
                                                                             data-colspan="1"
                                                                             style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
                                     <span style="font-size:14.6667px;color:rgb(0, 0, 0)">🗙</span></p></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Hàng nguyên vẹn nhưng
-                                    không còn nhu cầu (sẽ trả nguyên seal, tem, hộp sản phẩm)</strong>
-                                </td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
-                                <td data-row="4" rowspan="1" colspan="1"><p class="cs-cell-line" data-row="4"
-                                                                            data-cell="2" data-rowspan="1"
-                                                                            data-colspan="1"
-                                                                            style="text-align:center;line-height:1.2;margin-bottom:0.75em;margin-top:0px">
-                                    <span style="font-size:14.6667px;color:rgb(32, 33, 36);background-color:rgb(255, 255, 255)">✔</span>
-                                </p></td>
                             </tr>
                             </tbody>
                         </table>
