--- a/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
@@ -55,11 +55,7 @@
                                                 <span th:each="delivery : *{deliveryNotes}" class="text-start col"
                                                       th:text="${delivery.receivingAddress}"></span>
                                             </div>
-                                            <div class="row mb-3">
-                                                <b class="text-start col">Phí vận chuyển: </b>
-                                                <span  class="text-start col"
-                                                      th:text="|*{#numbers.formatDecimal(deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')} (VNĐ)|"/>
-                                            </div>
+
 
                                             <div class="row mb-3">
                                                 <b class="text-start col">Phương Thức Thanh Toán: </b>
@@ -73,11 +69,6 @@
                                                       class="text-start col"></span></div>
 
 
-                                            <div class="row mb-3">
-                                                <b class="text-start col">Voucher: </b>
-                                                <span th:text="|*{#numbers.formatDecimal(voucherValue,0,'COMMA',0,'POINT')} (VNĐ)|"
-                                                      class="text-start col"></span
-                                                ></div>
                                             <div class="row mb-3">
                                                 <table class="table table-bordered">
                                                     <thead>
@@ -111,13 +102,23 @@
                                                             </div>
                                                         </td>
                                                         <td th:text="${billProducts.quantity}"></td>
-                                                        <td th:text="${#numbers.formatDecimal(billProducts.price * billProducts.quantity - billProducts.reducedMoney,0,'COMMA',0,'POINT')}">
+                                                        <td th:text="${#numbers.formatDecimal((billProducts.price- billProducts.reducedMoney) * billProducts.quantity ,0,'COMMA',0,'POINT')}">
 
                                                         </td>
                                                     </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
+                                            <div class="row mb-3">
+                                                <b class="text-start col">Phí vận chuyển: </b>
+                                                <span  class="text-start col"
+                                                       th:text="|*{#numbers.formatDecimal(deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')} (VNĐ)|"/>
+                                            </div>
+                                            <div class="row mb-3">
+                                                <b class="text-start col">Voucher: </b>
+                                                <span th:text="|*{#numbers.formatDecimal(voucherValue,0,'COMMA',0,'POINT')} (VNĐ)|"
+                                                      class="text-start col"></span
+                                                ></div>
                                             <div class="row mb-3">
                                                 <b class="text-start col">Tổng Tiền: </b>
                                                 <span th:text="|*{#numbers.formatDecimal((totalPrice+deliveryNotes[0].deliveryFee),0,'COMMA',0,'POINT')} (VNĐ)|"
