--- a/webBanTiVi/src/main/resources/templates/user/page/profile/return.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/return.html
@@ -239,17 +239,17 @@
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Số tài khoản:  </span></div>
-                                        <div class="+MprAa"><input id="stk"  type="text"></div>
+                                        <div class="+MprAa"><input class="form-control" id="stk"  type="text"></div>
                                         <span class="errorSTK text-danger"></span>
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Ngân hàng:  </span></div>
-                                        <div class="+MprAa"><input id="nh" type="text"></div>
+                                        <div class="+MprAa"><input class="form-control"  id="nh" type="text"></div>
                                         <span class="errorNH text-danger"></span>
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Chủ sở hữu:  </span></div>
-                                        <div class="+MprAa" ><input id="csh" type="text"></div>
+                                        <div class="+MprAa" ><input class="form-control"  id="csh" type="text"></div>
                                         <span class="errorCSH text-danger"></span>
                                     </div>
                                 </div>
@@ -415,17 +415,17 @@
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Số tài khoản:  </span></div>
-                                        <div class="+MprAa" ><input id="stk" type="text"></div>
+                                        <div class="+MprAa" ><input class="form-control" id="stk" type="text"></div>
                                         <span class="errorSTK text-danger"></span>
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Ngân hàng:  </span></div>
-                                        <div class="+MprAa " ><input id="nh" type="text"></div>
+                                        <div class="+MprAa " ><input class="form-control" id="nh" type="text"></div>
                                         <span class="errorNH text-danger"></span>
                                     </div>
                                     <div class="qsfSj4">
                                         <div class="ROZVxd dCx+CJ"><span>Chủ sở hữu:  </span></div>
-                                        <div class="+MprAa "  ><input id="csh" type="text"></div>
+                                        <div class="+MprAa "  ><input class="form-control" id="csh" type="text"></div>
                                         <span class="errorCSH text-danger"></span>
                                     </div>
                                 </div>
