--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
@@ -72,19 +72,19 @@
                     <div class="tab-pane fade active show" id="navs-top-info-customer" role="tabpanel">
                         <form th:action="@{/admin/bill/bill_detail/delivery_note}" id="formUpdateDeliveryNotes">
                             <!--                            <div class="row">-->
-                            <div class="col-6 col-md-6">
-                                <button class="btn btn-secondary" type="button" id="btnEdit"
-                                        name="editInfo">Chỉnh sửa
-                                </button>
-                                <button class="btn btn-secondary" type="button" id="btnSave"
-                                        th:value="${deliveryNote?.id}"
-                                        name="editInfo">Lưu
-                                </button>
-                                <button class="btn btn-secondary" type="reset" id="btnCancel"
-                                        name="editInfo">Reset
-                                </button>
+<!--                            <div class="col-6 col-md-6">-->
+<!--                                <button class="btn btn-secondary" type="button" id="btnEdit"-->
+<!--                                        name="editInfo">Chỉnh sửa-->
+<!--                                </button>-->
+<!--                                <button class="btn btn-secondary" type="button" id="btnSave"-->
+<!--                                        th:value="${deliveryNote?.id}"-->
+<!--                                        name="editInfo">Lưu-->
+<!--                                </button>-->
+<!--                                <button class="btn btn-secondary" type="reset" id="btnCancel"-->
+<!--                                        name="editInfo">Reset-->
+<!--                                </button>-->
 
-                            </div>
+<!--                            </div>-->
                             <!--                            </div>-->
                             <hr>
                             <div class="table-responsive text-wrap">
