--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
@@ -547,8 +547,7 @@
     $.each($(".formAdd"), function (index, item) {
         $(item).on("submit", function (event) {
             event.preventDefault();
-            var $this = this;
-            console.log($this);
+            var $this = item;
             $.ajax({
                 url: "/admin/voucher/all",
                 method: "get",
@@ -632,7 +631,7 @@
                         $(value).parent().siblings(".valueloc").first().html("");
                     }
                     //minimumValue
-                    if (minimumValue.value.trim() == "" || value.value <= 0) {
+                    if (value.value <= 0) {
                         $(minimumValue)
                             .parent()
                             .siblings(".minimumValueloc")
@@ -641,10 +640,11 @@
                                 "<i class='bx bx-x-circle' style='color:#ff0000' ></i> Giá trị không được để trống và phải lớn hơn 0!"
                             );
                         status.push(false);
-                    } else if (minimumValue.value < value.value) {
+                    } else if (Number(minimumValue.value) < Number(value.value)) {
                         $(minimumValue).parent().siblings('.minimumValueloc').first().html("<i class='bx bx-x-circle' style='color:#ff0000' ></i> Giá trị tối thiểu không được nhỏ hơn giá trị giảm!");
                         status.push(false);
                     } else {
+                        console.log("a")
                         $(minimumValue)
                             .parent()
                             .siblings(".minimumValueloc")
